# doudizhu

./: $nul  .env.example  .gitignore  AGENTS.md  ASSETS.md  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GDD.md  IDEA.md  LICENSE.md  MEMORY.md  NOTICE.md  PLAN.md  README.md  ROADMAP.md  SCENES.md  SECURITY.md  STRUCTURE.md  STYLE.md  SUPPORT.md  TOC.md  ai_utils.gd  audio_controller.gd  card.gd  card.gd.uid  classifier.gd  classifier.gd.uid  comparer.gd  comparer.gd.uid  compose.yml  deck.gd  deck.gd.uid  doudizhu_engine.gd  doudizhu_engine.gd.uid  game.gd  game.gd.uid  localization_utils.gd  localization_utils.gd.uid  main.gd  (+22 more)
.github/: pull_request_template.md
.godotmaker/: applied_migrations.json  capture_evaluate_main.py  config.yaml  final_report.json  metrics.jsonl  run_verify_v0_6_0.json  stage.jsonl  stage_schemas.json  verify_report.json
.opencode/: hooks.json
client/: README.md  package-lock.json  package.json  playwright.config.js
docs/: architecture.md  design-pillars.md  doudizhu-high-fidelity-ui.html  gdd-v0.1.md  gdd-v0.2.md  onboarding-flow-gdd-v0.1.md  onboarding-implementation-v0.1.md  onboarding-journey-diagnostic-v0.1.md  player-event-log-spec-v0.1.md  release-checklist.md  replacing-placeholder-sounds.md  roadmap.md  ui-design-review.html  ui-product-prototype.html
e2e/: conftest.py  dz_helpers.py  test_main_flow.py  test_v0_1_0_M1_round_setup.py  test_v0_1_0_M4_core_legal_play.py  test_v0_1_0_M5_pass_flow.py  test_v0_1_0_M6_hint_action.py  (+28 more)
scenes/: game_world.tscn
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+1116 files in other folders)
