[package]
name = "doudizhu-desktop"
version = "0.1.0"
description = "Tauri desktop shell for Dou Dizhu."
authors = ["hkm"]
edition = "2021"

[lib]
name = "doudizhu_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2.9", features = [] }
